[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heroku-mcp"
version = "0.1.0"
description = "MCP server for managing Heroku Telegram userbot"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.44.0",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
heroku-mcp = "heroku_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["heroku_mcp"]
